tests/ui/rfcs/rfc-2497-if-let-chains/avoid-invalid-mir.stderr
error: expected expression, found `let` statement
  --> $DIR/avoid-invalid-mir.rs:5:6
   |
LL |     !let y = 42;
   |      ^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions

note: erroneous constant encountered
  --> $DIR/avoid-invalid-mir.rs:11:13
   |
LL |     x: [(); N]
   |             ^

error: aborting due to 1 previous error

